src/main/webapp/css/evekit.css
/* EveKit Container CSS */
.evekit-about {
	font-size: 10px;
	text-align: center;
}

.evekit-branch {
	color: #0F0;
	font-weight: bold;
}

.glyph-list {
	font-size: 2em;
	border: 3px solid; 
	padding: 7px; 
	border-radius: 5px;
}

.circle-list {
	font-size: 1.5em;
	border: 3px solid; 
	padding: 5px; 
	border-radius: 10px;
}

.sync-history-cont {
  width: 1em;
  height: 10.1em;	
  display: -webkit-box;
  box-align: end;
  -moz-box-align: end;
  -webkit-box-align: end;
  margin-right: -9px;
  margin-bottom: -2px;
}

.history-spacer {
	height: 0px;
	opacity: 0;	
}

.history-label-rot {
	padding: 2px 5px 2px 5px;
	white-space: nowrap;
	transform: rotate(270deg);
  -ms-transform: rotate(270deg) translateX(-10em);
  -moz-transform: rotate(270deg);
  -webkit-transform: rotate(270deg) translateX(-1.9em);
  -o-transform: rotate(270deg);
  transform-origin: left;
  -ms-transform-origin: left top;
  -webkit-transform-origin: left top;
  -moz-transform-origin: left top;
  -o-transform-origin: left;
  width: 10em;
  height: 2em;
}

.sync-history-ok {
	text-align: center;
	padding: 3px;
	border-width: 2px;
	border-style: solid;
	white-space: nowrap;
	width: 2em;
}

.sync-history-fail {
	text-align: center;
	padding: 3px;
	border-width: 2px;
	border-style: solid;
	white-space: nowrap;
	width: 2em;
}

.sync-history-warn {
	text-align: center;
	padding: 3px;
	border-width: 2px;
	border-style: solid;
	white-space: nowrap;
	width: 2em;
}

.sync-history-nop {
	text-align: center;
	padding: 3px;
	border-width: 2px;
	border-style: solid;
	white-space: nowrap;
	width: 2em;
}

.sync-history-na {
	text-align: center;
	padding: 3px;
	border-width: 2px;
	border-style: solid;
	white-space: nowrap;
	width: 2em;
}

.sync-history-spacer {
	text-align: center;
	white-space: nowrap;
	width: 2em;
	height: 0px;
}

.not-selectable {
	-webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Themeable settings */
.selected-account {
	border: 2px solid black;
}

.history-label {
	border: 2px solid black;
	color: #000;
	font-weight: bold;
}

.history-spacer {
	color: #fff;
}

.entry-label {
	border-left: 2px solid grey;
	border-bottom: 2px solid grey;	
}

.entry-box {
	border-left: 2px solid grey;
	border-bottom: 2px solid grey;	
}

.sync-history-ok {
	background-color: #0f0;
	color: #000;
	border-color: grey;
}

.sync-history-fail {
	background-color: #f00;
	color: #000;
	border-color: grey;
}

.sync-history-warn {
	background-color: #ff0;
	color: #000;
	border-color: grey;
}

.sync-history-nop {
	background-color: #fff;
	color: #000;
	border-color: grey;
}

.sync-history-na {
	background-color: #0ff;
	color: #000;
	border-color: grey;
}

.sync-history-spacer {
	background-color: #fff;
	color: #fff;
}

.prohibited-drop-highlight {
	border: 4px solid red;
}

.allowed-drop-highlight {
	border: 4px solid green;
}

.key-allowed:hover {
	background-color: #0F0;
}

.key-prohibited:hover {
	background-color: #F00;
}

/* EVE btn-auth */

.btn-eve,
.btn-eve:visited {
    border-color: #f9f9f9;
    border-bottom-color: #a9a9a9;
    color: #000;
    background-color: #d9d9d9;
    -webkit-box-shadow: inset 0 1px 0 #f9f9f9;
    box-shadow: inset 0 1px 0 #f9f9f9;
}

.btn-eve:hover,
.btn-eve:focus {
    color: #000;
    background-color: #d9d9d9;
}

.btn-eve:active {
    color: #000;
    background: #d9d9d9;
    -webkit-box-shadow: inset 0 1px 0 #d9d9d9;
    box-shadow: inset 0 1px 0 #d9d9d9;
}

.btn-eve:before {
    border-right: 1px solid #5f5f5f;
    margin: 0 1em 0 -1em;
    background-position: -1px -4px;
    background-image: url('EVE_SSO_Login_Buttons_Small_White.png');
    width: 54px;
}

/* Market Viewer Demo Styling */
.ekmd_axis {
  font: 14px sans-serif;
}

.ekmd_axis text {
  fill: #FFF;
}

.ekmd_axis path,
.ekmd_axis line  {
	fill: none;
	stroke: #FFF;
	shape-rendering: crispEdges;
}

.ekmd_line {
	fill: none;
	stroke: #e59210;
	stroke-width: 1.5px;
}

.ekmd_area {
	fill: #9F9F55;
	stroke-width: 0;
}

.ekmd_bar {
	fill: steelblue;
}

/* ESI token styling */
.token_valid {
	font-weight: bold;
	background-color: green;
	padding: 8px;
	border: 2px solid white;
}

.token_reauth {
	font-weight: bold;
	background-color: red;
	padding: 8px;
	border: 2px solid white;
}

